# perc_neuron_ros_ur10

./: README.md
pn_ros/bjorn_ws/: README.md
pn_ros/bjorn_ws/devel/: .catkin  .rosinstall  setup.sh
pn_ros/bjorn_ws/devel/lib/follow_hand/: follow_hand_node
pn_ros/bjorn_ws/devel/lib/joint_ctrl_publisher/: testJointControlPublisher  testJointCtrlPublisher
pn_ros/bjorn_ws/devel/lib/perc_neuron_tf_broadcaster/: perc_neuron_tf_broadcaster_node
pn_ros/bjorn_ws/devel/lib/pkgconfig/: follow_hand.pc  joint_ctrl_publisher.pc  perc_neuron_tf_broadcaster.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_windows.pc  rosserial_xbee.pc  tum_ics_ur10_bringup.pc  (+2 more)
pn_ros/bjorn_ws/install/: .rosinstall  _setup_util.py
pn_ros/bjorn_ws/src/follow_hand/: .frames.pdf.swp  CMakeLists.txt  package.xml
pn_ros/bjorn_ws/src/joint_ctrl_publisher/: CMakeLists.txt~  package.xml
pn_ros/bjorn_ws/src/perc_neuron_tf_broadcaster/: CMakeLists.txt  CMakeLists.txt~  package.xml~
pn_ros/bjorn_ws/src/ur10_robot/tum_ics_ur10_description/: CMakeLists.txt  package.xml
pn_ros/bjorn_ws/src/ur10_robot/tum_ics_ur10_description/robots/: upload_ur10.launch  ur10_zeros.yaml
pn_ros/bjorn_ws/src/ur10_robot/tum_ics_ur10_description/urdf/: ur10.urdf.xacro  ur10_joint_limited_robot.urdf  ur10_joint_limited_robot.urdf.xacro  ur10_robot.urdf  ur10_robot.urdf.xacro
pn_ros/bjorn_ws/src/ur_kinematics/: README.txt
pn_ros_windows/p/windows/: config.txt
(+67 files in other folders)
