<?xml version="1.0"?>
<package>
  <name>tum_ics_ur10_description</name>
  <version>0.1.0</version>
  <description>This package contains the description (mechanical, kinematic, visual,
      etc.) of UR10.  The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.</description>
  <maintainer email="dean@tum.de">Emmanuel Dean</maintainer>
  <license>Creative Commons BY-NC-ND 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

	 <!-- Dependencies needed to compile this package. -->
  <build_depend>urdf</build_depend>
	<build_depend>xacro</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
